=== 3.3 / ??

* Minor enhancements
  * The coverage report can now report undocumented method parameters
    including methods defined in C.

    <kbd>rdoc -C</kbd> gives a standard report, <kbd>rdoc -C1</kbd> includes
    method parameters.  Method parameters are considered documented if they're
    marked-up with <tt>+</tt>, <tt><code></tt> or <code><tt></code>.
* Bug fixes
  * Darkfish now handles dots in call-seq allowing <tt>ary.insert(index,
    obj...)</tt> to display correctly.  Patch #6 by KUBO Takehiro.
  * Improved processing of meta-programmed methods when followed by unparseable
    syntax.  RubyForge patch #28653 by Aidan Cully.
  * rdoc now touches the flag file when it create the output directory.
    Prevents the "isn't an RDoc directory" error if rdoc crashes.
  * RDoc now properly converts to the expected output encoding.  RubyForge bug
    #28791 by Dzmitry Prakapenka.
  * Restored parsing of block comments.  RubyForge bug #28668 by Stefano Crocco.
  * Metaprogrammed methods defined with blocks no longer confuse the ruby
    parser.  RubyForge bug #28370 by Erik Hollensbe.

=== 3.2 / 2010-12-29

* Minor enhancements
  * RDoc generator authors may now suppress updating the output dir (creating
    a created.rid file) by setting RDoc::Options#update_output_dir to false.
  * RDoc::Task has been refactored to ease creating subclasses.
* Bug fixes
  * RDoc's gitignore now ignores .DS_Store files.  Pull Request #3 by Shane
    Becker.

=== 3.1 / 2010-12-28

RDoc has moved to github.  Releases after 3.1 reference github unless
otherwise noted.

* Minor enhancements
  * RDoc::Task now features a #generator option to choose an alternate
    generator.  Pull Request #2 by Erik Hollensbe.
  * Enhanced test for RDoc::Parser::binary?  RubyForge patch #28538 by Eito
    Katagiri.
  * Generator list in --help is no longer static.  Generator description comes
    from the generator's DESCRIPTION constant.